# mars-airdrop-stats

./: .gitignore  Cargo.toml  mars-airdrop-stats.ipynb
.github/workflows/: rust.yaml
data/: output.json
src/: main.rs
