[package]
name          = "rust-template"
description   = "Template for single-crate Rust projects"
version       = "0.0.0"
authors       = ["Larry Engineer <gm@larry.engineer>"]
edition       = "2021"
rust-version  = "1.65"
license       = "UNLICENSED"
homepage      = "https://larry.engineer"
repository    = "https://github.com/steak-enjoyers/rust-template"
documentation = "https://github.com/steak-enjoyers/rust-template#README"
keywords      = ["template"]

[dependencies]
bech32           = "0.9"
clap             = { version = "4", features = ["derive"] }
cosmos-sdk-proto = { version = "0.16", features = ["grpc"] }
prost            = "0.11"
serde            = { version = "1", features = ["derive"] }
serde_json       = "1"
thiserror        = "1"
tokio            = { version = "1", features = ["full"] }
tonic            = "0.8"
